Last commit by middleware and front end

--- a/html5/styles/main.css
+++ b/html5/styles/main.css
@@ -44,8 +44,16 @@ textarea.conversation {
 
 }
 
-input[type='submit'] {
+input[type='button'], input[type='submit'] {
 	cursor: pointer;
+}
+
+.status_1 {
+	color: green;
+}
+
+.status_0 {
+	color: red;
 }
 
 /*special style for tablet*/
